--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@
 <img src="ATD LOGO.png" alt="POWERED BY ATD">
 <center><h1>Betosinavda.github.io'a geldiğiniz için teşekkürler</h1></center>
 </body>
-<html>
+</html>
